Reverting changes of deleting init_debugger_field. It was replaced with FieldInitializer but badly added into project

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -278,6 +278,7 @@
     <Compile Include="TextureHandler.cs" />
     <Compile Include="TIM2.cs" />
     <Compile Include="Battle\debug_battleDat.cs" />
+    <Compile Include="Field\FieldInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="DirectMidiNet">
