--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Extended.cs" />
     <Compile Include="FF8String.cs" />
     <Compile Include="Kernel\Kernel_bin.Ability.cs" />
+    <Compile Include="Kernel\Kernel_bin.CharacterAbilityFlags.cs" />
     <Compile Include="Menu\Cards.cs" />
     <Compile Include="Menu\Cards.ID.cs" />
     <Compile Include="EntryGroup.cs" />
