I added enabled and show/hide functions to more parts of the menu to make it easier to hide things on the fly. Had to swap the draw order of the menu items as i had stats drawing over the ability junctions
i split menu base class into it's own file.

the notice box for remove all magic and gfs was too small and text was escaping. changed ingamemenu to use startdraw and enddraw. changed order of ret || $1 to $1 || ret. Because if ret was true it wouldn't exeicute the function.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Menu\Magazine.InsertCustomEntries.cs" />
     <Compile Include="Menu\Magazine.ID.cs" />
     <Compile Include="Menu\Module_main_menu_debug.IGM_Junction.cs" />
+    <Compile Include="Menu\Module_main_menu_debug.Menu.cs" />
     <Compile Include="Menu\Module_main_menu_InGameMenu.cs" />
     <Compile Include="Menu\Module_main_menu_LGSG_CheckingSlot.cs" />
     <Compile Include="Menu\Module_main_menu_LGSG_ChooseGame.cs" />
