--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -249,6 +249,7 @@
     <Compile Include="Menu\IGM\IGMData\IGMData_SideMenu.cs" />
     <Compile Include="Menu\DrawBox.cs" />
     <Compile Include="Menu\DrawPointer.cs" />
+    <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Values.cs" />
     <Compile Include="Menu\Magazine.cs" />
     <Compile Include="Menu\Magazine.InsertCustomEntries.cs" />
     <Compile Include="Menu\Magazine.ID.cs" />
