--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -217,6 +217,7 @@
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_CharacterInfo.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_Commands.cs" />
     <Compile Include="Menu\IGMData\IGMData_ConfirmDialog.cs" />
+    <Compile Include="Menu\IGM_Junction\IGMData\IGMData_ConfirmChanges.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_ConfirmRemAll.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_ConfirmRemMag.cs" />
     <Compile Include="Menu\IGM_Junction\IGMData\IGMData_GF_Group.cs" />
