I noticed that killaudio was being skipped if I awaited the task to end first.
I think I actually fixed the midi exception this time.  I went through each varible and found two things weren't being disposed of. I also put the direct music code into it's own class.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="DictionaryEx.cs" />
+    <Compile Include="DM_Midi.cs" />
     <Compile Include="Extended.cs" />
     <Compile Include="FF8String.cs" />
     <Compile Include="Kernel\Kernel_bin.Ability.cs" />
@@ -841,8 +842,8 @@
     <Reference Include="DirectMidiNet">
       <HintPath>..\DirectMidiNet.dll</HintPath>
     </Reference>
-    <Reference Include="FFmpeg.AutoGen, Version=4.1.0.4, Culture=neutral, PublicKeyToken=9b7632533a381715, processorArchitecture=MSIL">
-      <HintPath>..\packages\FFmpeg.AutoGen.4.1.0.4\lib\net45\FFmpeg.AutoGen.dll</HintPath>
+    <Reference Include="FFmpeg.AutoGen, Version=4.1.0.5, Culture=neutral, PublicKeyToken=9b7632533a381715, processorArchitecture=MSIL">
+      <HintPath>..\packages\FFmpeg.AutoGen.4.1.0.5\lib\net45\FFmpeg.AutoGen.dll</HintPath>
     </Reference>
     <Reference Include="NAudio, Version=1.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NAudio.1.9.0\lib\net35\NAudio.dll</HintPath>
