Linux working again.
I resetup my linux vm and had to change path.  I was confused why it wasn't just throwing an exception it just closed. I added Debug.Writeline so atleast we get some kinda output even if the exceptionlist isn't thrown.
Added if _WINDOWS to ffcc

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -144,6 +144,12 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>FF8.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="DictionaryEx.cs" />
